--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,6 +75,7 @@
 
 /* variables */
 /* mixins */
+/* mobile phone */
 /* tablet */
 /* desktop */
 /* normalize.css */
@@ -454,11 +455,34 @@ section.is-grey {
   }
 }
 
+.is-tablet {
+  display: none;
+}
+@media (min-width: 768px) {
+  .is-tablet {
+    display: block;
+  }
+}
+@media (min-width: 1200px) {
+  .is-tablet {
+    display: none;
+  }
+}
+
 .is-mobile {
   display: block;
 }
 @media (min-width: 1200px) {
   .is-mobile {
+    display: none;
+  }
+}
+
+.is-xs {
+  display: block;
+}
+@media (min-width: 768px) {
+  .is-xs {
     display: none;
   }
 }
@@ -501,6 +525,7 @@ section.is-grey {
 }
 .menu__mobile-wrapper {
   position: relative;
+  height: 100%;
 }
 .menu__mobile-lang {
   writing-mode: vertical-rl;
@@ -542,6 +567,12 @@ section.is-grey {
 }
 
 /* header */
+.header {
+  position: sticky;
+  top: 0;
+  background: #fff;
+  z-index: 1;
+}
 .header__wrapper {
   display: flex;
   align-items: center;
@@ -553,9 +584,117 @@ section.is-grey {
   color: #828282;
   font-weight: bold;
   text-decoration: none;
+  cursor: pointer;
 }
 .header__link:hover, .header__link.is-active {
   color: #070707;
+}
+
+/* modal form */
+.modal__form {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal__form.is-active {
+  opacity: 1;
+  pointer-events: all;
+}
+.modal__form.is-active .modal__form-wrapper {
+  transform: translateX(0);
+}
+.modal__form-wrapper {
+  background: #fff;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 50px 30px;
+  width: calc(100% - 60px);
+  height: calc(100vh - 100px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(100%);
+  transition-delay: 500ms;
+}
+@media (min-width: 1200px) {
+  .modal__form-wrapper {
+    width: 400px;
+  }
+}
+.modal__form-form {
+  width: 100%;
+  padding: 0 40px;
+}
+.modal__form-form input, .modal__form-form textarea {
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  padding: 5px 10px;
+}
+.modal__form-form textarea {
+  resize: none;
+  height: 100px;
+}
+.modal__form-close {
+  position: absolute;
+  top: 50px;
+  right: 30px;
+  color: #828282;
+  font-size: 36px;
+}
+
+.footer {
+  padding: 120px 0;
+}
+.footer__button {
+  background: #070707;
+  color: #fff;
+  font-weight: bold;
+  border: 0;
+  border-radius: 25px;
+  cursor: pointer;
+  padding: 13px 29px;
+  margin-top: 30px;
+  width: 100%;
+}
+@media (min-width: 1200px) {
+  .footer__button {
+    width: auto;
+  }
+}
+.footer__button:hover {
+  background: #828282;
+}
+.footer__socials {
+  padding: 85px 0 45px 0;
+  display: flex;
+  justify-content: center;
+}
+.footer__socials-link {
+  font-size: 40px;
+  margin: 0 30px;
+  color: #070707;
+}
+.footer__socials-link:hover {
+  color: #828282;
+}
+.footer__copy {
+  font-size: 18px;
+  line-height: 22px;
+  color: #828282;
+}
+@media (min-width: 1200px) {
+  .footer__copy {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
 
 /* sections */
@@ -606,6 +745,11 @@ section.is-grey {
 .section__main-lang a:hover {
   color: #070707;
 }
+@media (min-width: 768px) {
+  .section__main-img {
+    width: 100%;
+  }
+}
 
 @media (min-width: 1200px) {
   .section__about-text {
@@ -644,13 +788,20 @@ section.is-grey {
   justify-content: space-between;
   margin-bottom: 80px;
 }
+@media (max-width: 767px) {
+  .section__skills-item:last-child {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 768px) {
+  .section__skills-item {
+    width: 50%;
+  }
+}
 @media (min-width: 1200px) {
   .section__skills-item {
     margin: 0;
   }
-}
-.section__skills-item:last-child {
-  margin-bottom: 0;
 }
 .section__skills-item-title {
   color: #828282;
@@ -688,94 +839,6 @@ section.is-grey {
 }
 .section__portfolio-item-link:hover {
   text-decoration: none;
-}
-
-.footer {
-  padding: 120px 0;
-}
-.footer__button {
-  background: #070707;
-  color: #fff;
-  font-weight: bold;
-  border: 0;
-  border-radius: 25px;
-  cursor: pointer;
-  padding: 13px 29px;
-  margin-top: 30px;
-  width: 100%;
-}
-@media (min-width: 1200px) {
-  .footer__button {
-    width: auto;
-  }
-}
-.footer__button:hover {
-  background: #828282;
-}
-.footer__socials {
-  padding: 85px 0 45px 0;
-  display: flex;
-  justify-content: center;
-}
-.footer__socials-link {
-  font-size: 40px;
-  margin: 0 30px;
-  color: #070707;
-}
-.footer__socials-link:hover {
-  color: #828282;
-}
-.footer__copy {
-  font-size: 18px;
-  line-height: 22px;
-  color: #828282;
-}
-@media (min-width: 1200px) {
-  .footer__copy {
-    font-size: 14px;
-    line-height: 17px;
-  }
-}
-
-/* modal form */
-.modal__form {
-  background: rgba(0, 0, 0, 0.5);
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  opacity: 0;
-  pointer-events: none;
-}
-.modal__form.is-active {
-  opacity: 1;
-  pointer-events: all;
-}
-.modal__form.is-active .modal__form-wrapper {
-  transform: translateX(0);
-}
-.modal__form-wrapper {
-  background: #fff;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 50px 30px;
-  width: 400px;
-  height: calc(100vh - 100px);
-  display: flex;
-  align-content: center;
-  justify-items: center;
-  transform: translateX(100%);
-  transition-delay: 500ms;
-}
-.modal__form-close {
-  position: absolute;
-  top: 50px;
-  right: 30px;
-  color: #828282;
-  font-size: 36px;
 }
 
 /*# sourceMappingURL=style.css.map */
