--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,602 +1,12 @@
-/* fonts */
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-Medium.eot');
-    src: url('../fonts/Gilroy-Medium.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Gilroy-Medium.woff') format('woff'),
-         url('../fonts/Gilroy-Medium.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-MediumItalic.eot');
-    src: url('../fonts/Gilroy-MediumItalic.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Gilroy-MediumItalic.woff') format('woff'),
-         url('../fonts/Gilroy-MediumItalic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-Bold.eot');
-    src: url('../fonts/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Gilroy-Bold.woff') format('woff'),
-         url('../fonts/Gilroy-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Gilroy';
-    src: url('../fonts/Gilroy-BoldItalic.eot');
-    src: url('../fonts/Gilroy-BoldItalic.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Gilroy-BoldItalic.woff') format('woff'),
-         url('../fonts/Gilroy-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
-}
-
-/* icon font */
-
-@font-face {
-    font-family: 'icons';
-    src: url('../fonts/icons.eot');
-    src: url('../fonts/icons.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/icons.woff') format('woff'),
-         url('../fonts/icons.ttf') format('truetype'),
-         url('../fonts/icons.svg#icons') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-[class*='icon-']:before{
-	display: inline-block;
-   font-family: 'icons';
-   font-style: normal;
-   font-weight: normal;
-   line-height: 1;
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale
-}
-.icon-behance:before{content:'\0041';}
-.icon-instagram:before{content:'\0042';}
-.icon-linkedin:before{content:'\0043';}
-.icon-dribble:before{content:'\0044';}
-.icon-menu:before{content:'\0045';}
-.icon-star:before{content:'\0046';}
-.icon-close:before{content:'\0047';}
-
-/* variables */
-
-$black: #070707;
-$grey: #828282;
-$bgGrey: #F6F6F6;
-$starGrey: #E5E5E5;
-
-/* mixins */
-
-/* tablet */
-@mixin md {
-  @media (min-width: 768px) {
-    @content;
-  }
-}
-
-/* desktop */
-@mixin xl {
-  @media (min-width: 1200px) {
-    @content;
-  }
-}
-
-/* normalize.css */
-
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-  margin: 0;
-  font-family: 'Gilroy';
-  font-size: 18px;
-  line-height: 22px;
-  color: $black;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 47px;
-  line-height: 59px;
-  margin: 0.67em 0;
-}
-
-h2, h3 {
-  font-size: 34px;
-  line-height: 42px;
-  margin: 0 0 25px 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
-}
-
-/* generic */
-
-.is-animated {
-  transition: all 300ms ease;
-}
-
-section {
-  padding: 80px 0;
-
-  @include xl {
-    padding: 100px 0;
-  }
-
-  &.is-grey {
-    background: $bgGrey;
-  }
-}
-
-.is-desktop {
-  display: none;
-
-  @include xl {
-    display: block;
-  }
-}
-
-.is-mobile {
-  display: block;
-
-  @include xl {
-    display: none;
-  }
-}
-
-.content-container {
-  width: calc(100% - 60px);
-  padding: 0 30px;
-  text-align: center;
-
-  @include xl {
-    width: 944px;
-    margin: 0 auto;
-  }
-}
-
-/* mobile menu */
-
-.menu__button {
-  position: absolute;
-  right: 30px;
-  top: 65px;
-  font-size: 35px;
-  cursor: pointer;
-}
-
-.menu__mobile {
-  width: calc(100vw - 52px);
-  height: calc(100vh - 132px);
-  padding: 66px 26px;
-  background: #fff;
-  position: fixed;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  pointer-events: none;
-
-  &.is-active {
-    opacity: 1;
-    pointer-events: all;
-  }
-
-  &-wrapper {
-    position: relative;
-  }
-
-  &-lang {
-    writing-mode: vertical-rl;
-    transform: rotate(360deg);
-    font-weight: bold;
-    font-size: 34px;
-    line-height: 42px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-
-    a {
-      color: $grey;
-      text-decoration: none;
-
-      &:hover {
-        color: $black;
-      }
-    }
-  }
-
-  &-link {
-    font-size: 34px;
-    font-weight: bold;
-    text-decoration: none;
-    color: $grey;
-    line-height: 42px;
-    display: block;
-    text-align: left;
-    margin-bottom: 65px;
-
-    &.is-active {
-      color: $black;
-    }
-  }
-
-  &-close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 32px;
-    color: $grey;
-    cursor: pointer;
-  }
-}
-
-/* header */
-
-.header {
-  &__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 32px 0;
-    border-bottom: 1px solid $grey;
-  }
-
-  &__link {
-    color: $grey;
-    font-weight: bold;
-    text-decoration: none;
-
-    &:hover, &.is-active {
-      color: $black;
-    }
-  }
-}
+@import 'fonts.scss';
+@import 'variables.scss';
+@import 'mixins.scss';
+@import 'normalize.scss';
+@import 'generic.scss';
+@import 'mobile-menu.scss';
+@import 'header.scss';
+@import 'form.scss';
+@import 'footer.scss';
 
 /* sections */
 
@@ -649,6 +59,12 @@ section {
       }
     }
   }
+
+  &-img {
+    @include md {
+      width: 100%;
+    }
+  }
 }
 
 .section__about {
@@ -693,12 +109,18 @@ section {
     justify-content: space-between;
     margin-bottom: 80px;
 
-    @include xl {
-      margin: 0;
+    @include xs {
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  
+    @include md {
+      width: 50%;
     }
 
-    &:last-child {
-      margin-bottom: 0;
+    @include xl {
+      margin: 0;
     }
 
     &-title {
@@ -745,102 +167,5 @@ section {
         text-decoration: none;
       }
     }
-  }
-}
-
-.footer {
-  padding: 120px 0;
-
-  &__button {
-    background: $black;
-    color: #fff;
-    font-weight: bold;
-    border: 0;
-    border-radius: 25px;
-    cursor: pointer;
-    padding: 13px 29px;
-    margin-top: 30px;
-    width: 100%;
-
-    @include xl {
-      width: auto;
-    }
-
-    &:hover {
-      background: $grey;
-    }
-  }
-
-  &__socials {
-    padding: 85px 0 45px 0;
-    display: flex;
-    justify-content: center;
-
-    &-link {
-      font-size: 40px;
-      margin: 0 30px;
-      color: $black;
-
-      &:hover {
-        color: $grey;
-      }
-    }
-  }
-
-  &__copy {
-    font-size: 18px;
-    line-height: 22px;
-    color: $grey;
-
-    @include xl {
-      font-size: 14px;
-      line-height: 17px;
-    }
-  }
-}
-
-/* modal form */
-
-.modal__form {
-  background: rgba(0, 0, 0, 0.5);
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  opacity: 0;
-  pointer-events: none;
-
-  &.is-active {
-    opacity: 1;
-    pointer-events: all;
-
-    .modal__form-wrapper {
-      transform: translateX(0);
-    }
-  }
-
-  &-wrapper {
-    background: #fff;
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 50px 30px;
-    width: 400px;
-    height: calc(100vh - 100px);
-    display: flex;
-    align-content: center;
-    justify-items: center;
-    transform: translateX(100%);
-    transition-delay: 500ms;
-  }
-
-  &-close {
-    position: absolute;
-    top: 50px;
-    right: 30px;
-    color: $grey;
-    font-size: 36px;
   }
 }
